--- a/scripts/crosstool-NG.sh.in
+++ b/scripts/crosstool-NG.sh.in
@@ -529,7 +529,7 @@ if [ -z "${CT_RESTART}" ]; then
     if [ "${CT_WANTS_STATIC_LINK}" = "y" ]; then
         CT_DoStep DEBUG "Checking that gcc can compile a trivial statically linked program (CT_WANTS_STATIC_LINK)"
         CT_DoLog DEBUG "You may need to ensure that static libraries such as libc.a are installed on your system"
-        CT_DoExecLog DEBUG "${CT_HOST}-gcc" ${CT_CFLAGS_FOR_HOST} ${CT_LDFLAGS_FOR_HOST} "${testc}" -static -o "${gccout}"
+        CT_DoExecLog DEBUG "${CT_HOST}-gcc" ${CT_CFLAGS_FOR_HOST} ${CT_LDFLAGS_FOR_HOST} "${testc}" -Bstatic -o "${gccout}"
         rm -f "${gccout}"
         CT_EndStep
     fi
@@ -537,7 +537,7 @@ if [ -z "${CT_RESTART}" ]; then
     if [ "${CT_CC_GCC_STATIC_LIBSTDCXX}" = "y" ]; then
         CT_DoStep DEBUG "Checking that gcc can statically link libstdc++ (CT_CC_GCC_STATIC_LIBSTDCXX)"
         CT_DoLog DEBUG "You may need to ensure that libstdc++.a is installed on your system"
-        CT_DoExecLog DEBUG "${CT_HOST}-gcc" ${CT_CFLAGS_FOR_HOST} ${CT_LDFLAGS_FOR_HOST} "${testc}" -static -lstdc++ -o "${gccout}"
+        CT_DoExecLog DEBUG "${CT_HOST}-gcc" ${CT_CFLAGS_FOR_HOST} ${CT_LDFLAGS_FOR_HOST} "${testc}" -Bstatic -lstdc++ -o "${gccout}"
         rm -f "${gccout}"
         CT_EndStep
     fi
