--- a/config/kernel/linux.in
+++ b/config/kernel/linux.in
@@ -69,6 +69,10 @@ config KERNEL_V_3_16
     bool
     prompt "3.16.38"
 
+config KERNEL_V_3_14
+    bool
+    prompt "3.14.62"
+
 config KERNEL_V_3_12
     bool
     prompt "3.12.67"
@@ -97,6 +101,7 @@ config KERNEL_VERSION
     default "4.1.35" if KERNEL_V_4_1
     default "3.18.44" if KERNEL_V_3_18
     default "3.16.38" if KERNEL_V_3_16
+    default "3.14.62" if KERNEL_V_3_14
     default "3.12.67" if KERNEL_V_3_12
     default "3.10.104" if KERNEL_V_3_10
     default "3.4.113" if KERNEL_V_3_4
