--- a/config/companion_tools.in
+++ b/config/companion_tools.in
@@ -24,7 +24,15 @@ config COMP_TOOLS
       If your system has older versions, we can build them for you,
       but you are strongly encouraged to update your system instead!
 
-if COMP_TOOLS
+config COMP_TOOLS_FOR_HOST
+    bool
+    prompt "Install companion tools for host"
+    help
+      Enable this option if you want to include the selected companion
+      tools into the final toolchain (rather than just using them
+      to build it).
+
+if COMP_TOOLS || COMP_TOOLS_FOR_HOST
 source "config.gen/companion_tools.in"
 endif
 
