--- a/config/debug/dmalloc.in
+++ b/config/debug/dmalloc.in
@@ -1,6 +1,7 @@
 # dmalloc debug facility
 
 ## depends on ! BACKEND
+## depends on ! BARE_METAL
 ##
 ## help dmalloc helps tracking memory allocation mis-usage
 ## help such as double-free, use-after-free...
